# bot

./: .env.prod  README.en.md  README.md  bot.py  pyproject.toml
data/: .gitignore
wuyubot/: __init__.py
wuyubot/tasks/: __init__.py  init.py
wuyubot/utils/: __init__.py  load_config.py  yaml.py
